# iitb_oauth

./: .isort.cfg  .travis.yml  LICENCE  README.md  readme.md  requirements.txt  setup.cfg  setup.py  tox.ini
example/: settings.py  urls.py
example/templates/: index.html
iitb_oauth/: backend.py  helpers.py  urls.py  views.py
tests/: settings.py
