[metadata]
license_file = LICENSE
project_urls =
  Travis CI = https://travis-ci.org/github/nautatva/iitb_oauth/
  Source code = https://github.com/nautatva/iitb_oauth/

[wheel]
universal = 1

[flake8]
exclude = *.egg-info,.git,.settings,.tox,build,dist,docs,requirements,tmp,*migrations*,tests
ignore = E231,E501,W503

[isort]
known_third_party=django
known_first_party=iitb_oauth